src/runtime/datara_runtime.h

// First-Class Hardware Accelerated SIMD (AVX2 / NEON / SSE2)
typedef struct { float x, y, z, w; } DataraFloat4;
typedef struct { int32_t x, y, z, w; } DataraInt4;
typedef DataraFloat4 DataraF32x4;
typedef struct { float v[8]; } DataraF32x8;
typedef struct { float v[16]; } DataraF32x16;
typedef DataraInt4 DataraI32x4;
typedef struct { int32_t v[8]; } DataraI32x8;
typedef struct { double x, y; } DataraF64x2;
typedef struct { double x, y, z, w; } DataraF64x4;
int          datara_rt_simd_enabled(void);
// std.simd constructors & operations
DataraF32x4  datara_rt_f32x4(double x, double y, double z, double w);
DataraF32x8  datara_rt_f32x8(double v0, double v1, double v2, double v3, double v4, double v5, double v6, double v7);
DataraI32x4  datara_rt_i32x4(int64_t x, int64_t y, int64_t z, int64_t w);
DataraI32x8  datara_rt_i32x8(int64_t v0, int64_t v1, int64_t v2, int64_t v3, int64_t v4, int64_t v5, int64_t v6, int64_t v7);
DataraF64x2  datara_rt_f64x2(double x, double y);
DataraF64x4  datara_rt_f64x4(double x, double y, double z, double w);
DataraF32x4  datara_rt_f32x4_add(DataraF32x4 a, DataraF32x4 b);
DataraF32x4  datara_rt_f32x4_sub(DataraF32x4 a, DataraF32x4 b);
DataraF32x4  datara_rt_f32x4_mul(DataraF32x4 a, DataraF32x4 b);
DataraF32x4  datara_rt_f32x4_div(DataraF32x4 a, DataraF32x4 b);
double       datara_rt_f32x4_dot(DataraF32x4 a, DataraF32x4 b);
DataraF32x4  datara_rt_f32x4_cross(DataraF32x4 a, DataraF32x4 b);
double       datara_rt_f32x4_horizontal_add(DataraF32x4 a);
DataraF32x4  datara_rt_f32x4_min(DataraF32x4 a, DataraF32x4 b);
DataraF32x4  datara_rt_f32x4_max(DataraF32x4 a, DataraF32x4 b);
DataraF32x4  datara_rt_f32x4_lerp(DataraF32x4 a, DataraF32x4 b, double t);
DataraF32x4  datara_rt_f32x4_normalize(DataraF32x4 a);
double       datara_rt_f32x4_distance(DataraF32x4 a, DataraF32x4 b);
double       datara_rt_f32x8_dot(DataraF32x8 a, DataraF32x8 b);
double       datara_rt_f32x8_horizontal_add(DataraF32x8 a);
double       datara_rt_f32x16_horizontal_add(DataraF32x16 a);
int64_t      datara_rt_i32x4_dot(DataraI32x4 a, DataraI32x4 b);
int64_t      datara_rt_i32x4_horizontal_add(DataraI32x4 a);
int64_t      datara_rt_i32x8_horizontal_add(DataraI32x8 a);
double       datara_rt_f64x2_dot(DataraF64x2 a, DataraF64x2 b);
double       datara_rt_f64x4_dot(DataraF64x4 a, DataraF64x4 b);
double       datara_rt_dot_f32_array(const float* a, const float* b, int64_t n);
DataraF32x4  datara_rt_ray_sphere_4x_simd(DataraF32x4 ro_x, DataraF32x4 ro_y, DataraF32x4 ro_z, DataraF32x4 rd_x, DataraF32x4 rd_y, DataraF32x4 rd_z, DataraF32x4 cx, DataraF32x4 cy, DataraF32x4 cz, DataraF32x4 radius);
DataraF32x4  datara_rt_ray_sphere_4x_scalar(DataraF32x4 ro_x, DataraF32x4 ro_y, DataraF32x4 ro_z, DataraF32x4 rd_x, DataraF32x4 rd_y, DataraF32x4 rd_z, DataraF32x4 cx, DataraF32x4 cy, DataraF32x4 cz, DataraF32x4 radius);
void         datara_rt_ray_sphere_batch_simd(const float* rox, const float* roy, const float* roz, const float* rdx, const float* rdy, const float* rdz, float cx, float cy, float cz, float r, float* out_t, int64_t count);
void         datara_rt_ray_sphere_batch_scalar(const float* rox, const float* roy, const float* roz, const float* rdx, const float* rdy, const float* rdz, float cx, float cy, float cz, float r, float* out_t, int64_t count);
void        datara_rt_parallel_for(int64_t start, int64_t end, void (*fn)(int64_t idx, void* ctx), void* ctx);